--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,13 +52,27 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.google.dagger:hilt-android:2.28.1-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28.1-alpha"
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation("org.danilopianini:gson-extras:0.2.1")
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "androidx.core:core-ktx:1.3.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
+
+    // Room components
+    implementation "androidx.room:room-runtime:2.2.5"
+    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-ktx:2.2.5"
+    androidTestImplementation "androidx.room:room-testing:2.2.5"
+
 
     implementation "androidx.compose.runtime:runtime:1.0.0-alpha03"
     implementation "androidx.compose.ui:ui:1.0.0-alpha03"
@@ -70,4 +84,16 @@ dependencies {
     implementation "androidx.ui:ui-tooling:1.0.0-alpha03"
     implementation "androidx.compose.runtime:runtime-livedata:1.0.0-alpha03"
 
+
+    //Kotlin Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
