--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.5.0-alpha03'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
@@ -61,7 +61,6 @@ dependencies {
     implementation("org.danilopianini:gson-extras:0.2.1")
 
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation "androidx.core:core-ktx:1.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.fragment:fragment-ktx:1.2.5"
 
@@ -83,6 +82,7 @@ dependencies {
     implementation "androidx.compose.animation:animation:1.0.0-alpha03"
     implementation "androidx.ui:ui-tooling:1.0.0-alpha03"
     implementation "androidx.compose.runtime:runtime-livedata:1.0.0-alpha03"
+    implementation "dev.chrisbanes.accompanist:accompanist-coil:0.2.2"
 
 
     //Kotlin Coroutines
@@ -96,4 +96,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+
 }
